force-app/main/default/objects/Distribution__c/Distribution__c.object-meta.xml
<CustomObject>
    <description>Related to Index Card and Contact with date distributed for use in Index Card rollup</description>
    <label>Distribution</label>
    <nameField>
        <displayFormat>Dist-{000000}</displayFormat>
        <label>Distribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>