force-app/main/default/objects/Distribution__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>