force-app/main/default/objects/Distribution__c/fields/Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Date__c</fullName>
    <label>Distribution Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>