force-app/main/default/objects/Distribution__c/fields/Distribution_Tally__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Tally__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Always 1</description>
    <label>Distribution Tally</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>