force-app/main/default/objects/Distribution__c/fields/Index_Card__c.field-meta.xml
<CustomField>
    <fullName>Index_Card__c</fullName>
    <label>Index Card</label>
    <referenceTo>Index_Card__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>